--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -1,6 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="3dp"
+    android:elevation="5dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp">
+
+        <ImageView
+            android:id="@+id/item_pokemon_image"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintWidth_percent="0.3"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintDimensionRatio="w,1:1" />
+
+        <TextView
+            android:id="@+id/item_pokemon_name"
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:padding="5dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/item_pokemon_image"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/item_pokemon_attack"
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:lines="2"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/item_pokemon_name"
+            app:layout_constraintStart_toEndOf="@+id/item_pokemon_image"
+            app:layout_constraintEnd_toStartOf="@+id/item_pokemon_defence"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <TextView
+            android:id="@+id/item_pokemon_defence"
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:lines="2"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/item_pokemon_name"
+            app:layout_constraintStart_toEndOf="@+id/item_pokemon_attack"
+            app:layout_constraintEnd_toStartOf="@+id/item_pokemon_movement"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <TextView
+            android:id="@+id/item_pokemon_movement"
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:lines="2"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/item_pokemon_name"
+            app:layout_constraintStart_toEndOf="@+id/item_pokemon_defence"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
