--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -15,6 +15,7 @@
             android:id="@+id/item_pokemon_image"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="w,1:1"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,12 +52,12 @@
             android:gravity="center"
             android:lines="2"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/item_pokemon_movement"
+            app:layout_constraintEnd_toStartOf="@+id/item_pokemon_speed"
             app:layout_constraintStart_toEndOf="@+id/item_pokemon_attack"
             app:layout_constraintTop_toBottomOf="@id/item_pokemon_name" />
 
         <TextView
-            android:id="@+id/item_pokemon_movement"
+            android:id="@+id/item_pokemon_speed"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
