--- a/app/src/main/res/layout/fragment_pokemons.xml
+++ b/app/src/main/res/layout/fragment_pokemons.xml
@@ -41,9 +41,10 @@
         android:id="@+id/pokemons_filter_attack"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/toggle_attack_background"
+        android:background="@null"
         android:textOff=""
         android:textOn=""
+        app:icons="@drawable/toggle_attack_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pokemons_filter_defence"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,9 +54,10 @@
         android:id="@+id/pokemons_filter_defence"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/toggle_defence_background"
+        android:background="@null"
         android:textOff=""
         android:textOn=""
+        app:icons="@drawable/toggle_defence_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pokemons_filter_movement"
         app:layout_constraintStart_toEndOf="@+id/pokemons_filter_attack"
@@ -65,9 +67,10 @@
         android:id="@+id/pokemons_filter_movement"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/toggle_speed_background"
+        android:background="@null"
         android:textOff=""
         android:textOn=""
+        app:icons="@drawable/toggle_speed_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pokemons_filter_defence"
