--- a/app/src/main/res/layout/fragment_pokemons.xml
+++ b/app/src/main/res/layout/fragment_pokemons.xml
@@ -44,7 +44,8 @@
         android:background="@null"
         android:padding="5dp"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_attack_off"
+        android:src="@drawable/ic_attack"
+        android:tint="@color/filter_inactive"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pokemons_filter_defence"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +58,8 @@
         android:background="@null"
         android:padding="5dp"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_defence_off"
+        android:src="@drawable/ic_defense"
+        android:tint="@color/filter_inactive"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pokemons_filter_movement"
         app:layout_constraintStart_toEndOf="@+id/pokemons_filter_attack"
@@ -70,7 +72,8 @@
         android:background="@null"
         android:padding="5dp"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_speed_off"
+        android:src="@drawable/ic_speed"
+        android:tint="@color/filter_inactive"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pokemons_filter_defence"
