--- a/app/src/main/res/layout/item_pokemon_image.xml
+++ b/app/src/main/res/layout/item_pokemon_image.xml
@@ -4,15 +4,15 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
+    <!-- ratio doesn't work? app:layout_constraintDimensionRatio="H,1:1" -->
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/pokemon_details_image"
-        android:layout_width="0dp"
+        android:layout_width="200dp"
         android:layout_height="200dp"
         android:scaleType="centerInside"
-        app:layout_constraintDimensionRatio="h,1:1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
